--- a/DavidSerb.Web/Views/Shared/_Layout.cshtml
+++ b/DavidSerb.Web/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>Serb David Copyright - &copy; @DateTime.Now.Year</p>
+            <p>Serb David Copyright &copy; @DateTime.Now.Year</p>
         </footer>
     </div>
 
