--- a/DavidSerb.Web/Views/Country/Create.cshtml
+++ b/DavidSerb.Web/Views/Country/Create.cshtml
@@ -1,5 +1,5 @@
 ﻿@*@addTagHelper "*, Microsoft.AspNetCore.Mvc.TagHelpers"*@
-@model DavidSerb.Web.Models.Country
+@model DavidSerb.DataModel.Models.Country
 
 @{
     Layout = null;
