--- a/DavidSerb.Web/Views/Depot/Index.cshtml
+++ b/DavidSerb.Web/Views/Depot/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<DavidSerb.Web.Models.Depot>
+﻿@model List<DavidSerb.DataModel.Models.Depot>
 
 <h1>Depots</h1>
 
@@ -38,4 +38,8 @@
 
 <p>
     <a class="btn btn-primary" href="@Url.Action("Create")">Create new</a>
+</p>
+
+<p>
+    <a class="btn btn-primary" href="@Url.Action("DepotUnits")">Depot Units</a>
 </p>
