--- a/DavidSerb.Web/Views/Country/Index.cshtml
+++ b/DavidSerb.Web/Views/Country/Index.cshtml
@@ -48,5 +48,5 @@
 </table>
 
 <p>
-    <a class="btn btn-primary" href="@Url.Action("Create")">Create new</a>
+    <a class="btn btn-success" href="@Url.Action("Create")">Create new</a>
 </p>
