--- a/DavidSerb.Web/Views/DrugType/Index.cshtml
+++ b/DavidSerb.Web/Views/DrugType/Index.cshtml
@@ -28,6 +28,6 @@
 </table>
 
 <p>
-    <a class="btn btn-primary" href="@Url.Action("Create")">Create new</a>
-    <a class="btn btn-primary" href="@Url.Action("DisplayWeight")">Check Total Weights</a>
+    <a class="btn btn-success" href="@Url.Action("Create")">Create new</a>
+    <a class="btn btn-info" href="@Url.Action("DisplayWeight")">Check Total Weights</a>
 </p>
