--- a/DavidSerb.Web/Views/Depot/Index.cshtml
+++ b/DavidSerb.Web/Views/Depot/Index.cshtml
@@ -37,9 +37,6 @@
 </table>
 
 <p>
-    <a class="btn btn-primary" href="@Url.Action("Create")">Create new</a>
-</p>
-
-<p>
-    <a class="btn btn-primary" href="@Url.Action("DepotUnits")">Depot Units</a>
+    <a class="btn btn-success" href="@Url.Action("Create")">Create new</a>
+    <a class="btn btn-info" href="@Url.Action("DepotUnits")">Depot Units</a>
 </p>
