--- a/DavidSerb.Web/Views/DrugUnit/Index.cshtml
+++ b/DavidSerb.Web/Views/DrugUnit/Index.cshtml
@@ -59,6 +59,6 @@
 </table>
 
 <p>
-    <a class="btn btn-primary" href="@Url.Action("Create")">Create new</a>
-    <a class="btn btn-primary" href="@Url.Action("GroupedDrugUnits")">Grouped Drug Units</a>
+    <a class="btn btn-success" href="@Url.Action("Create")">Create new</a>
+    <a class="btn btn-info" href="@Url.Action("GroupedDrugUnits")">Grouped Drug Units</a>
 </p>
