--- a/DavidSerb.Web/Views/Site/Index.cshtml
+++ b/DavidSerb.Web/Views/Site/Index.cshtml
@@ -41,5 +41,5 @@
 </table>
 
 <p>
-    <a class="btn btn-primary" href="@Url.Action("Create")">Create new</a>
+    <a class="btn btn-success" href="@Url.Action("Create")">Create new</a>
 </p>
